# kf-multi-agent

./: .gitignore  eval.py  main.py  pyproject.toml  server.py
src/: __init__.py  config.py  graph.py  logging.py  retry.py  state.py  supervisor.py
src/agents/: __init__.py  human_agent.py  logistics_agent.py  order_agent.py  refund_agent.py
src/db/: __init__.py  connection.py  registry.py  schema.py  seed.py
src/eval/: judge.py  runner.py  scenarios.py
src/memory/: __init__.py  consolidator.py  profile_store.py  session_store.py
src/tools/: __init__.py  handoff.py  logistics_tools.py  order_tools.py  refund_tools.py
static/: index.html
tests/: conftest.py
